--- a/start.ipynb
+++ b/start.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/14/l3lz9l417qx68dth25zm8r7m0000gn/T/ipykernel_10227/3964348248.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from pandas_datareader import data as pdr\n",
@@ -16,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +86,7 @@
        "      <td>324.890015</td>\n",
        "      <td>322.529999</td>\n",
        "      <td>324.869995</td>\n",
-       "      <td>305.058441</td>\n",
+       "      <td>305.058380</td>\n",
        "      <td>59151200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -80,7 +95,7 @@
        "      <td>323.640015</td>\n",
        "      <td>321.100006</td>\n",
        "      <td>322.410004</td>\n",
-       "      <td>302.748474</td>\n",
+       "      <td>302.748413</td>\n",
        "      <td>77709700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -89,7 +104,7 @@
        "      <td>323.730011</td>\n",
        "      <td>320.359985</td>\n",
        "      <td>323.640015</td>\n",
-       "      <td>303.903503</td>\n",
+       "      <td>303.903442</td>\n",
        "      <td>55653900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -98,7 +113,7 @@
        "      <td>323.540009</td>\n",
        "      <td>322.239990</td>\n",
        "      <td>322.730011</td>\n",
-       "      <td>303.048981</td>\n",
+       "      <td>303.048950</td>\n",
        "      <td>40496400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -117,10 +132,10 @@
       "text/plain": [
        "                  Open        High         Low       Close   Adj Close  \\\n",
        "Date                                                                     \n",
-       "2020-01-02  323.540009  324.890015  322.529999  324.869995  305.058441   \n",
-       "2020-01-03  321.160004  323.640015  321.100006  322.410004  302.748474   \n",
-       "2020-01-06  320.489990  323.730011  320.359985  323.640015  303.903503   \n",
-       "2020-01-07  323.019989  323.540009  322.239990  322.730011  303.048981   \n",
+       "2020-01-02  323.540009  324.890015  322.529999  324.869995  305.058380   \n",
+       "2020-01-03  321.160004  323.640015  321.100006  322.410004  302.748413   \n",
+       "2020-01-06  320.489990  323.730011  320.359985  323.640015  303.903442   \n",
+       "2020-01-07  323.019989  323.540009  322.239990  322.730011  303.048950   \n",
        "2020-01-08  322.940002  325.779999  322.670013  324.450012  304.664062   \n",
        "\n",
        "              Volume  \n",
@@ -132,7 +147,7 @@
        "2020-01-08  68296000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -251,14 +266,27 @@
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "Agent.__init__() takes 3 positional arguments but 10 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 35\u001b[0m\n\u001b[1;32m     33\u001b[0m env \u001b[38;5;241m=\u001b[39m SimplifiedStockTradingEnv(data, T\u001b[38;5;241m=\u001b[39mT)\n\u001b[1;32m     34\u001b[0m epsilon_greedy \u001b[38;5;241m=\u001b[39m EpsilonGreedy(epsilon_start\u001b[38;5;241m=\u001b[39mes, epsilon_min\u001b[38;5;241m=\u001b[39mem, epsilon_decay\u001b[38;5;241m=\u001b[39med, env\u001b[38;5;241m=\u001b[39menv, model\u001b[38;5;241m=\u001b[39mmodel)\n\u001b[0;32m---> 35\u001b[0m agent \u001b[38;5;241m=\u001b[39m \u001b[43mAgent\u001b[49m\u001b[43m(\u001b[49m\u001b[43menv\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msync_period\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlr_scheduler\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mloss_fn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreplay_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepsilon_greedy\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: Agent.__init__() takes 3 positional arguments but 10 were given"
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bca7eb5a908d4191a0b4854fd7070ddb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/9 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/juliengadonneix/Desktop/code/INF581/Project/RL4Trading/utils/epsilon_greedy.py:30: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  state_tensor = torch.tensor(state, dtype=torch.float32, device=self.model.device)\n",
+      "/Users/juliengadonneix/anaconda3/envs/torch/lib/python3.11/site-packages/torch/nn/modules/loss.py:535: UserWarning: Using a target size (torch.Size([128, 1])) that is different to the input size (torch.Size([128, 128])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n"
      ]
     }
    ],
@@ -284,11 +312,14 @@
     "es = 0.82\n",
     "em = 0.013\n",
     "ed = 0.9675\n",
+    "num_episodes=10\n",
+    "gamma=0.9\n",
+    "batch_size=128\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_available() else \"cpu\"\n",
     "\n",
     "\n",
-    "model = DQN(T, 1).to(device)\n",
-    "target_model = DQN(T, 1).to(device)\n",
+    "model = DQN(T+2, 1, device).to(device)\n",
+    "target_model = DQN(T+2, 1, device).to(device)\n",
     "optimizer = torch.optim.AdamW(model.parameters(), lr=lr, amsgrad=True)\n",
     "#lr_scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.999)\n",
     "lr_scheduler = MinimumExponentialLR(optimizer, lr_decay=0.97, min_lr=0.0001)\n",
@@ -297,7 +328,8 @@
     "replay_buffer = ReplayBuffer(rb)\n",
     "env = SimplifiedStockTradingEnv(data, T=T)\n",
     "epsilon_greedy = EpsilonGreedy(epsilon_start=es, epsilon_min=em, epsilon_decay=ed, env=env, model=model)\n",
-    "agent = Agent(env, model, target_model, sync_period, optimizer, lr_scheduler, loss_fn, replay_buffer, epsilon_greedy)\n"
+    "agent = Agent(env, model, target_model, sync_period, optimizer, lr_scheduler, loss_fn, replay_buffer, epsilon_greedy)\n",
+    "agent.train(num_episodes, gamma, batch_size)\n"
    ]
   },
   {
@@ -309,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
