change lstm and create example notebook

--- a/start.ipynb
+++ b/start.ipynb
@@ -294,7 +294,7 @@
     "\n",
     "# Parameters\n",
     "T = 20 \n",
-    "price_list_size = T+1\n",
+    "price_list_size = 1\n",
     "sync_period=30\n",
     "lr = 0.001\n",
     "rb = 2000\n",
@@ -317,7 +317,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating Models ...\n",
+      "Creating Models ...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "... Models Created\n",
       "\n",
       "Creating Optimizer, LR Scheduler and Loss Function ...\n",
@@ -389,12 +395,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d33013ee8274101abad99336a0711b2",
+       "model_id": "f38099fb83094824810b5ec9de9a1680",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/10 [00:00<?, ?it/s]"
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -404,16 +410,117 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 1, reward: 438.2750619666041, percentage of random = 0.8359150889271372\n",
-      "Episode 2, reward: 559.6890170468961, percentage of random = 0.8141135972461274\n",
-      "Episode 3, reward: 428.48885602361645, percentage of random = 0.7705106138841079\n",
-      "Episode 4, reward: 548.4663000664674, percentage of random = 0.7458405048766494\n",
-      "Episode 5, reward: 542.9127243002644, percentage of random = 0.7194492254733219\n",
-      "Episode 6, reward: 578.5857606003625, percentage of random = 0.6873207114170969\n",
-      "Episode 7, reward: 604.0337807043658, percentage of random = 0.6506024096385542\n",
-      "Episode 8, reward: 550.7079946136793, percentage of random = 0.6448651749856569\n",
-      "Episode 9, reward: 450.84839520934304, percentage of random = 0.6385542168674698\n",
-      "Episode 10, reward: 506.0644355693963, percentage of random = 0.6150315547905909\n"
+      "Episode 1, reward: 620.1009683316848, percentage of random = 0.8238668961560528\n",
+      "Episode 2, reward: 627.2587771381033, percentage of random = 0.7951807228915663\n",
+      "Episode 3, reward: 490.8247890455217, percentage of random = 0.7773952954675847\n",
+      "Episode 4, reward: 578.432571279253, percentage of random = 0.7418244406196214\n",
+      "Episode 5, reward: 552.0828076666297, percentage of random = 0.7022375215146299\n",
+      "Episode 6, reward: 548.8086235206864, percentage of random = 0.7200229489386116\n",
+      "Episode 7, reward: 499.5229611124438, percentage of random = 0.6896156052782558\n",
+      "Episode 8, reward: 501.243888541719, percentage of random = 0.6345381526104418\n",
+      "Episode 9, reward: 546.7515718760534, percentage of random = 0.6351118760757315\n",
+      "Episode 10, reward: 554.2019176165333, percentage of random = 0.6087205966724039\n",
+      "Episode 11, reward: 556.3982288120629, percentage of random = 0.5777395295467584\n",
+      "Episode 12, reward: 608.4716591647795, percentage of random = 0.5742971887550201\n",
+      "Episode 13, reward: 465.0057453181895, percentage of random = 0.5410212277682157\n",
+      "Episode 14, reward: 604.0474151213667, percentage of random = 0.5410212277682157\n",
+      "Episode 15, reward: 528.3234763506017, percentage of random = 0.5232358003442341\n",
+      "Episode 16, reward: 540.7005715966048, percentage of random = 0.5065978198508319\n",
+      "Episode 17, reward: 630.9625269911368, percentage of random = 0.4899598393574297\n",
+      "Episode 18, reward: 550.9569069237647, percentage of random = 0.4457831325301205\n",
+      "Episode 19, reward: 558.7141269527873, percentage of random = 0.4434882386689616\n",
+      "Episode 20, reward: 526.5558700357079, percentage of random = 0.423407917383821\n",
+      "Episode 21, reward: 454.1137012235255, percentage of random = 0.41308089500860584\n",
+      "Episode 22, reward: 575.3704556329704, percentage of random = 0.4268502581755594\n",
+      "Episode 23, reward: 558.4925240271606, percentage of random = 0.3780837636259323\n",
+      "Episode 24, reward: 512.307377108188, percentage of random = 0.3729202524383247\n",
+      "Episode 25, reward: 597.0564179898548, percentage of random = 0.3803786574870912\n",
+      "Episode 26, reward: 576.137333225991, percentage of random = 0.37349397590361444\n",
+      "Episode 27, reward: 500.8584870687333, percentage of random = 0.3614457831325301\n",
+      "Episode 28, reward: 512.5621034314182, percentage of random = 0.3448078026391279\n",
+      "Episode 29, reward: 529.7432531290129, percentage of random = 0.3344807802639128\n",
+      "Episode 30, reward: 548.1945397630469, percentage of random = 0.3092369477911647\n",
+      "Episode 31, reward: 494.0485075227606, percentage of random = 0.3207114170969593\n",
+      "Episode 32, reward: 586.1907902315817, percentage of random = 0.2903040734366036\n",
+      "Episode 33, reward: 523.9754718292135, percentage of random = 0.2834193918531268\n",
+      "Episode 34, reward: 487.7703093436463, percentage of random = 0.2736660929432014\n",
+      "Episode 35, reward: 616.8218726601077, percentage of random = 0.2707974756167527\n",
+      "Episode 36, reward: 567.1252116628931, percentage of random = 0.25415949512335057\n",
+      "Episode 37, reward: 488.73439932822373, percentage of random = 0.2472748135398738\n",
+      "Episode 38, reward: 511.2217892807124, percentage of random = 0.23752151462994836\n",
+      "Episode 39, reward: 589.3875597376156, percentage of random = 0.2248995983935743\n",
+      "Episode 40, reward: 532.8847076399535, percentage of random = 0.2289156626506024\n",
+      "Episode 41, reward: 512.2456516014905, percentage of random = 0.2076878944348824\n",
+      "Episode 42, reward: 496.96074489183604, percentage of random = 0.22432587492828457\n",
+      "Episode 43, reward: 541.7352419812424, percentage of random = 0.2099827882960413\n",
+      "Episode 44, reward: 579.862223551506, percentage of random = 0.18990246701090074\n",
+      "Episode 45, reward: 437.3046753862192, percentage of random = 0.19162363740676994\n",
+      "Episode 46, reward: 504.1350910113657, percentage of random = 0.18932874354561102\n",
+      "Episode 47, reward: 529.4665331764012, percentage of random = 0.168100975329891\n",
+      "Episode 48, reward: 553.7056372438395, percentage of random = 0.18014916810097534\n",
+      "Episode 49, reward: 528.7047987333616, percentage of random = 0.16580608146873207\n",
+      "Episode 50, reward: 606.2841275075306, percentage of random = 0.17326448651749857\n",
+      "Episode 51, reward: 558.2525239570626, percentage of random = 0.1549053356282272\n",
+      "Episode 52, reward: 595.8221708384507, percentage of random = 0.1589213998852553\n",
+      "Episode 53, reward: 589.5762155422286, percentage of random = 0.1451520367183018\n",
+      "Episode 54, reward: 451.33536967580505, percentage of random = 0.1549053356282272\n",
+      "Episode 55, reward: 580.6820969890715, percentage of random = 0.1359724612736661\n",
+      "Episode 56, reward: 563.5875072498894, percentage of random = 0.13482501434308664\n",
+      "Episode 57, reward: 620.28188395169, percentage of random = 0.12220309810671257\n",
+      "Episode 58, reward: 624.8692967452408, percentage of random = 0.13826735513482502\n",
+      "Episode 59, reward: 471.0738419291182, percentage of random = 0.1227768215720023\n",
+      "Episode 60, reward: 562.3465803326, percentage of random = 0.12335054503729202\n",
+      "Episode 61, reward: 480.08011619323054, percentage of random = 0.11761331038439472\n",
+      "Episode 62, reward: 542.5686585202444, percentage of random = 0.11761331038439472\n",
+      "Episode 63, reward: 517.1787890656564, percentage of random = 0.1153184165232358\n",
+      "Episode 64, reward: 615.9514000411633, percentage of random = 0.11302352266207688\n",
+      "Episode 65, reward: 528.525100477009, percentage of random = 0.1078600114744693\n",
+      "Episode 66, reward: 427.1537520455298, percentage of random = 0.09753298909925416\n",
+      "Episode 67, reward: 527.8286259831012, percentage of random = 0.08433734939759036\n",
+      "Episode 68, reward: 600.5762089869182, percentage of random = 0.09179575444635686\n",
+      "Episode 69, reward: 345.12384834385205, percentage of random = 0.07917383820998279\n",
+      "Episode 70, reward: 449.653423921343, percentage of random = 0.07802639127940333\n",
+      "Episode 71, reward: 320.22066742402524, percentage of random = 0.08376362593230063\n",
+      "Episode 72, reward: 543.0762019914681, percentage of random = 0.07228915662650602\n",
+      "Episode 73, reward: 538.973138771248, percentage of random = 0.07687894434882386\n",
+      "Episode 74, reward: 486.6419532153992, percentage of random = 0.07974756167527251\n",
+      "Episode 75, reward: 527.2033800739549, percentage of random = 0.07056798623063683\n",
+      "Episode 76, reward: 668.6268445746556, percentage of random = 0.08433734939759036\n",
+      "Episode 77, reward: 306.64528345499014, percentage of random = 0.06138841078600115\n",
+      "Episode 78, reward: 448.8413366959604, percentage of random = 0.07114170969592656\n",
+      "Episode 79, reward: 327.0335044914217, percentage of random = 0.05450372920252438\n",
+      "Episode 80, reward: 337.60313861329143, percentage of random = 0.06712564543889846\n",
+      "Episode 81, reward: 456.94948311269775, percentage of random = 0.058519793459552494\n",
+      "Episode 82, reward: 302.2352240721526, percentage of random = 0.05048766494549627\n",
+      "Episode 83, reward: 384.7790083248625, percentage of random = 0.052782558806655194\n",
+      "Episode 84, reward: 503.3946378585571, percentage of random = 0.051061388410786\n",
+      "Episode 85, reward: 459.66457811500834, percentage of random = 0.05966724039013196\n",
+      "Episode 86, reward: 433.7398621583603, percentage of random = 0.05909351692484223\n",
+      "Episode 87, reward: 287.8303049546399, percentage of random = 0.042455536431440045\n",
+      "Episode 88, reward: 324.2883181190215, percentage of random = 0.05163511187607573\n",
+      "Episode 89, reward: 317.42022621128683, percentage of random = 0.039586919104991396\n",
+      "Episode 90, reward: 300.17879412817854, percentage of random = 0.04073436603557085\n",
+      "Episode 91, reward: 298.85164548744626, percentage of random = 0.045324153757888695\n",
+      "Episode 92, reward: 534.9906052059827, percentage of random = 0.042455536431440045\n",
+      "Episode 93, reward: 304.75789540037647, percentage of random = 0.03442340791738382\n",
+      "Episode 94, reward: 447.97128943983273, percentage of random = 0.03671830177854274\n",
+      "Episode 95, reward: 295.81800521339176, percentage of random = 0.03442340791738382\n",
+      "Episode 96, reward: 305.057596886738, percentage of random = 0.037292025243832475\n",
+      "Episode 97, reward: 261.6932951381194, percentage of random = 0.03557085484796328\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m episode_reward_list \u001b[38;5;241m=\u001b[39m \u001b[43magent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnum_episodes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgamma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/INF581/RL4Trading/utils/agent.py:94\u001b[0m, in \u001b[0;36mAgent.train\u001b[0;34m(self, num_episodes, gamma, batch_size)\u001b[0m\n\u001b[1;32m     91\u001b[0m loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mloss_fn(targets, estimates)\n\u001b[1;32m     93\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[0;32m---> 94\u001b[0m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     95\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[1;32m     96\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlr_scheduler\u001b[38;5;241m.\u001b[39mstep()\n",
+      "File \u001b[0;32m~/.local/lib/python3.9/site-packages/torch/_tensor.py:522\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    512\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    513\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    514\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[1;32m    515\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    520\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs,\n\u001b[1;32m    521\u001b[0m     )\n\u001b[0;32m--> 522\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mautograd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    523\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minputs\u001b[49m\n\u001b[1;32m    524\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.9/site-packages/torch/autograd/__init__.py:266\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    261\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[1;32m    263\u001b[0m \u001b[38;5;66;03m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[1;32m    264\u001b[0m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[1;32m    265\u001b[0m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[0;32m--> 266\u001b[0m \u001b[43mVariable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execution_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[1;32m    267\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    268\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    269\u001b[0m \u001b[43m    \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    270\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    271\u001b[0m \u001b[43m    \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    272\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    273\u001b[0m \u001b[43m    \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    274\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -422,8 +529,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Global results"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -446,8 +560,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results for the first episode"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -525,11 +646,51 @@
     "plt.title('Histogram')\n",
     "for i in range(len(hist)):\n",
     "    plt.text(bin_centers[i], hist[i], str(int(hist[i])), ha='center', va='bottom')\n",
-    "plt.show()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "plt.scatter(range(len(agent.action_list[0])), agent.action_list[0])\n",
-    "plt.show()\n",
+    "plt.title('Actions')\n",
+    "plt.xlabel('Time')\n",
+    "plt.ylabel('Action')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "plt.plot(agent.wealth_list[0])\n",
-    "plt.show()\n",
+    "plt.title('Wealth')\n",
+    "plt.xlabel('Time')\n",
+    "plt.ylabel('Wealth')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results for the last episode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "bin_edges = np.linspace(min(agent.action_list[-1]), max(agent.action_list[-1]), num_bins + 1)\n",
     "hist, _ = np.histogram(agent.action_list[-1], bins=bin_edges)\n",
     "bin_centers = (bin_edges[1:] + bin_edges[:-1]) / 2\n",
@@ -540,10 +701,32 @@
     "plt.title('Histogram')\n",
     "for i in range(len(hist)):\n",
     "    plt.text(bin_centers[i], hist[i], str(int(hist[i])), ha='center', va='bottom')\n",
-    "plt.show()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.scatter(range(len(agent.action_list[-1])), agent.action_list[-1])\n",
-    "plt.show()\n",
+    "plt.title('Actions')\n",
+    "plt.xlabel('Time')\n",
+    "plt.ylabel('Action')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.plot(agent.wealth_list[-1])\n",
+    "plt.title('Wealth')\n",
+    "plt.xlabel('Time')\n",
+    "plt.ylabel('Wealth')\n",
     "plt.show()"
    ]
   }
