--- a/start.ipynb
+++ b/start.ipynb
@@ -317,10 +317,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating Models ...\n",
-      "... Models Created\n",
-      "\n",
-      "Creating Optimizer, LR Scheduler and Loss Function ...\n"
+      "Creating Models ...\n"
      ]
     },
     {
@@ -335,6 +332,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "... Models Created\n",
+      "\n",
+      "Creating Optimizer, LR Scheduler and Loss Function ...\n",
       "... Optimizer, LR Scheduler and Loss Function Created\n",
       "\n",
       "Creating Replay Buffer ...\n",
@@ -403,7 +403,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2859b63483e84fe19aa3ce52111c0beb",
+       "model_id": "e9765cec1ee649c9a1ff530fb079bbc0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -418,7 +418,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 1, reward: 24.37, percentage of random = 0.81\n"
+      "Episode 1, reward: 516.31, percentage of random = 0.83\n",
+      "Episode 2, reward: 650.54, percentage of random = 0.79\n",
+      "Episode 3, reward: 592.17, percentage of random = 0.78\n",
+      "Episode 4, reward: 603.96, percentage of random = 0.75\n",
+      "Episode 5, reward: 654.73, percentage of random = 0.72\n",
+      "Episode 6, reward: 488.12, percentage of random = 0.70\n",
+      "Episode 7, reward: 591.68, percentage of random = 0.66\n",
+      "Episode 8, reward: 485.33, percentage of random = 0.65\n",
+      "Episode 9, reward: 416.75, percentage of random = 0.63\n",
+      "Episode 10, reward: 555.04, percentage of random = 0.60\n",
+      "Episode 11, reward: 525.18, percentage of random = 0.58\n",
+      "Episode 12, reward: 607.81, percentage of random = 0.55\n"
      ]
     }
    ],
@@ -659,22 +670,20 @@
     "# Informations de connexion au serveur Zimbra\n",
     "smtp_server = 'webmail.polytechnique.fr'\n",
     "smtp_port = 587  # Utilisez le port SMTP approprié pour Zimbra\n",
-    "smtp_username = 'mathias.grau'\n",
-    "smtp_password = '..mGmG040202.x'\n",
+    "smtp_username = 'prenom.nom'\n",
+    "smtp_password = 'mot_de_passe'\n",
     "\n",
     "\n",
     "\n",
     "# Sender and recipient details\n",
     "from_email = 'resultat_simulation_rl@polytechnique.edu'\n",
-    "to_email = ['mathias.grau@polytechnique.edu']\n",
+    "to_email = ['prenom.nom@polytechnique.edu']\n",
     "subject = 'Résultat simulation RL'\n",
     "\n",
     "# Corps du message\n",
     "message_text = \"Voici le résultat de la simulation RL\"\n",
     "# Signature HTML\n",
-    "signature_html = \"\"\"\n",
-    "<div><p class=\"MsoNormal\" style=\"color: rgb(0, 0, 0); font-family: &quot;calibri&quot;, &quot;sans-serif&quot;; font-size: 11pt; font-style: normal; font-variant: normal; font-weight: 400; letter-spacing: normal; margin: 0cm 0cm 0pt; text-align: left; text-decoration: none; text-indent: 0px; text-transform: none; -webkit-text-stroke-width: 0px; white-space: normal; word-spacing: 0px;\"><span style=\"font-size: 12pt;\"><b><i><span style=\"color: rgb(7, 55, 99); font-family: &quot;georgia&quot;, &quot;serif&quot;;\">Mathias Grau</span></i></b></span><i><span style=\"font-family: &quot;georgia&quot;, &quot;serif&quot;; font-size: 10pt;\"></span></i></p><p class=\"MsoNormal\" style=\"color: rgb(0, 0, 0); font-family: &quot;calibri&quot;, &quot;sans-serif&quot;; font-size: 11pt; font-style: normal; font-variant: normal; font-weight: 400; letter-spacing: normal; margin: 0cm 0cm 0pt; text-align: left; text-decoration: none; text-indent: 0px; text-transform: none; -webkit-text-stroke-width: 0px; white-space: normal; word-spacing: 0px;\"><strong><span style=\"font-size: 10pt;\"><i><span style=\"color: rgb(7, 55, 99); font-family: &quot;georgia&quot;, &quot;serif&quot;;\">Vice-Président du X-Forum</span></i></span></strong></p><p class=\"MsoNormal\" style=\"color: rgb(0, 0, 0); font-family: &quot;calibri&quot;, &quot;sans-serif&quot;; font-size: 11pt; font-style: normal; font-variant: normal; font-weight: 400; letter-spacing: normal; margin: 0cm 0cm 0pt; text-align: left; text-decoration: none; text-indent: 0px; text-transform: none; -webkit-text-stroke-width: 0px; white-space: normal; word-spacing: 0px;\"><span style=\"font-size: 10pt;\"><i><span style=\"color: rgb(7, 55, 99); font-family: &quot;georgia&quot;, &quot;serif&quot;;\">Étudiant en 3ème année à l’École Polytechnique</span></i></span><i><span style=\"color: rgb(7, 55, 99); font-family: &quot;georgia&quot;, &quot;serif&quot;; font-size: 8pt;\"></span></i><span style=\"font-size: 10pt;\"><i><span style=\"color: rgb(7, 55, 99); font-family: &quot;georgia&quot;, &quot;serif&quot;;\"></span></i></span></p><div><img data-mce-src=\"https://webmail.polytechnique.fr/home/raphael.descamps@zimbra.polytechnique.fr/Briefcase/XForum.png\" style=\"font-family: arial, helvetica, sans-serif; font-size: 12pt;\" src=\"https://webmail.polytechnique.fr/service/home/~/?auth=co&amp;loc=fr_FR&amp;id=15676&amp;part=2.2&amp;t=1695827583791\" width=\"271\" height=\"83\" dfsrc=\"cid:8340b8f55c6c0cbd1cae28ccd9160fbd7ea69bc3@zimbra\"></div><div><span style=\"font-size: 9pt;\"><b><i><span style=\"color: rgb(7, 55, 99); font-family: &quot;georgia&quot;, &quot;serif&quot;;\">Association <a href=\"https://xentreprises.com\" target=\"_blank\" rel=\"noopener\">X-Forum</a>, École Polytechnique</span></i></b></span></div><p class=\"MsoNormal\" style=\"color: rgb(0, 0, 0); font-family: &quot;calibri&quot;, &quot;sans-serif&quot;; font-size: 11pt; font-style: normal; font-variant: normal; font-weight: 400; letter-spacing: normal; margin: 0cm 0cm 0pt; text-align: left; text-decoration: none; text-indent: 0px; text-transform: none; -webkit-text-stroke-width: 0px; white-space: normal; word-spacing: 0px;\"></p><p class=\"MsoNormal\" style=\"color: rgb(0, 0, 0); font-family: &quot;calibri&quot;, &quot;sans-serif&quot;; font-size: 11pt; font-style: normal; font-variant: normal; font-weight: 400; letter-spacing: normal; line-height: 10.5pt; margin: 0cm 0cm 0pt; text-align: left; text-decoration: none; text-indent: 0px; text-transform: none; -webkit-text-stroke-width: 0px; white-space: normal; word-spacing: 0px;\"><span style=\"font-size: 9pt;\"><span style=\"color: rgb(7, 55, 99); font-family: &quot;georgia&quot;, &quot;serif&quot;;\">91128 PALAISEAU CEDEX</span><span style=\"color: rgb(7, 55, 99); font-family: &quot;georgia&quot;, &quot;serif&quot;;\"><br></span><span style=\"color: rgb(7, 55, 99); font-family: &quot;georgia&quot;, &quot;serif&quot;;\">T</span><span style=\"color: rgb(31, 73, 125); font-family: &quot;georgia&quot;, &quot;serif&quot;;\">.</span><span style=\"color: rgb(7, 55, 99); font-family: &quot;georgia&quot;, &quot;serif&quot;;\"> </span><span style=\"font-family: &quot;georgia&quot;, &quot;serif&quot;;\">+33 (0)6 52 82 53 78</span><span style=\"font-family: &quot;times new roman&quot;, &quot;serif&quot;;\"></span></span></p><span class=\"Object\" id=\"OBJ_PREFIX_DWT2435_ZmEmailObjectHandler\" style=\"color: rgb(0, 105, 144); cursor: pointer; text-decoration: none;\"><span class=\"Object\" id=\"OBJ_PREFIX_DWT145_ZmEmailObjectHandler\"><span class=\"Object\" id=\"OBJ_PREFIX_DWT147_ZmEmailObjectHandler\"><span style=\"color: blue; font-family: &quot;georgia&quot;, &quot;serif&quot;; font-size: 9pt;\"><a href=\"mailto:mathias.grau@polytechnique.edu\" target=\"_blank\">mathias.grau@polytechnique.edu﻿</a></span></span></span></span><span class=\"Object\" style=\"color: rgb(0, 105, 144); cursor: pointer; text-decoration: none;\"><span class=\"Object\"><span class=\"Object\"><span style=\"color: blue; font-family: &quot;georgia&quot;, &quot;serif&quot;; font-size: 9pt;\"><a href=\"https://www.x-forum.fr/\" title=\"X-Forum\" target=\"_blank\"></a></span></span></span></span><br></div>\"\"\"\n",
-    "\n",
+    "signature_html = \"<p>Cordialement,<br>Prénom Nom</p>\"\n",
     "# Create the MIMEMultipart object\n",
     "msg = MIMEMultipart()\n",
     "msg['From'] = formataddr((None, from_email))  # Ensure proper encoding for sender\n",
