change spy to intel

--- a/start.ipynb
+++ b/start.ipynb
@@ -429,7 +429,10 @@
       "Episode 9, reward: 416.75, percentage of random = 0.63\n",
       "Episode 10, reward: 555.04, percentage of random = 0.60\n",
       "Episode 11, reward: 525.18, percentage of random = 0.58\n",
-      "Episode 12, reward: 607.81, percentage of random = 0.55\n"
+      "Episode 12, reward: 607.81, percentage of random = 0.55\n",
+      "Episode 13, reward: 607.11, percentage of random = 0.56\n",
+      "Episode 14, reward: 586.46, percentage of random = 0.55\n",
+      "Episode 15, reward: 521.82, percentage of random = 0.51\n"
      ]
     }
    ],
@@ -671,19 +674,19 @@
     "smtp_server = 'webmail.polytechnique.fr'\n",
     "smtp_port = 587  # Utilisez le port SMTP approprié pour Zimbra\n",
     "smtp_username = 'prenom.nom'\n",
-    "smtp_password = 'mot_de_passe'\n",
+    "smtp_password = '..mGmG040202.x'\n",
     "\n",
     "\n",
     "\n",
     "# Sender and recipient details\n",
     "from_email = 'resultat_simulation_rl@polytechnique.edu'\n",
-    "to_email = ['prenom.nom@polytechnique.edu']\n",
+    "to_email = ['mathias.grau@polytechnique.edu']\n",
     "subject = 'Résultat simulation RL'\n",
     "\n",
     "# Corps du message\n",
     "message_text = \"Voici le résultat de la simulation RL\"\n",
     "# Signature HTML\n",
-    "signature_html = \"<p>Cordialement,<br>Prénom Nom</p>\"\n",
+    "signature_html = \"<p>Cordialement,<br>ZIMBRAAAAA</p>\"\n",
     "# Create the MIMEMultipart object\n",
     "msg = MIMEMultipart()\n",
     "msg['From'] = formataddr((None, from_email))  # Ensure proper encoding for sender\n",
