--- a/start.ipynb
+++ b/start.ipynb
@@ -674,13 +674,13 @@
     "smtp_server = 'webmail.polytechnique.fr'\n",
     "smtp_port = 587  # Utilisez le port SMTP approprié pour Zimbra\n",
     "smtp_username = 'prenom.nom'\n",
-    "smtp_password = '..mGmG040202.x'\n",
+    "smtp_password = 'mdp'\n",
     "\n",
     "\n",
     "\n",
     "# Sender and recipient details\n",
     "from_email = 'resultat_simulation_rl@polytechnique.edu'\n",
-    "to_email = ['mathias.grau@polytechnique.edu']\n",
+    "to_email = ['prenom.nom@polytechnique.edu']\n",
     "subject = 'Résultat simulation RL'\n",
     "\n",
     "# Corps du message\n",
